--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,16 @@ body {
     background: rgb(181, 230, 191);
     font-family: Arial, Helvetica, sans-serif;
 }
+.assignment{
+    display: flex;
+    padding: 10px;
+    margin: 10px;
+    background: lightyellow;
+}
+.assignment img{
+    width: 200px;
+    padding: 10px;
+}
 h1 {
     color: darkslategrey;
     text-align: center;
