--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,19 @@ body {
     display: flex;
     padding: 10px;
     margin: 10px;
-    background: lightyellow;
+    background: #8FBC8B;
 }
 .assignment img{
     width: 200px;
-    padding: 10px;
+    border: 2px solid #556B2F;
+    margin-right: 20px;
 }
 h1 {
     color: darkslategrey;
     text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: #D8BFD8;
 }
