--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,16 @@ body {
     display: flex;
     padding: 10px;
     margin: 10px;
+    margin-bottom: 30px;
     background: #8FBC8B;
+    border-radius: 5px;
+    box-shadow: 5px 8px #223303;
 }
 .assignment img{
     width: 200px;
     border: 2px solid #556B2F;
     margin-right: 20px;
+    border-radius: 5px;
 }
 h1 {
     color: darkslategrey;
@@ -21,4 +25,7 @@ h1 {
 a {
     text-decoration: none;
     color: #D8BFD8;
+}
+.assignment a:hover {
+    color: darkslategrey;;
 }
