--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,12 @@ body {
     background: rgb(181, 230, 191);
     font-family: Arial, Helvetica, sans-serif;
 }
+.assignments {
+    display:flex;
+    flex-wrap:wrap;
+}
 .assignment{
-    display: flex;
+    width: 21%;
     padding: 10px;
     margin: 10px;
     margin-bottom: 30px;
@@ -16,6 +20,7 @@ body {
     border: 2px solid #556B2F;
     margin-right: 20px;
     border-radius: 5px;
+    display:block:
 }
 h1 {
     color: darkslategrey;
