--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     border: 2px solid #556B2F;
     margin-right: 20px;
     border-radius: 5px;
-    display:block:
+    display:block;
 }
 h1 {
     color: darkslategrey;
